# hackathon-demo

./: README.md  docker-compose.prod.yaml  docker-compose.yaml  tree.txt
.github/workflows/: deploy-to-lightsail.yaml
backend/: Dockerfile  Dockerfile.prod
backend/rust/: Cargo.toml  README.md
backend/rust/src/: auth.rs  db.rs  main.rs  models.rs  routes.rs
backend/rust/src/handlers/: mod.rs  root.rs  user.rs
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  next.config.ts
frontend/next/: package.json
frontend/next/src/app/: layout.tsx  page.tsx
migrator/: Dockerfile.prod  sqlx.toml  wait-for-mysql.sh
migrator/migrations/: 20250621024407_create_users_table.sql
mysql/: Dockerfile
nginx/: Dockerfile  default.conf
