[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "macros", "ws"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sqlx   = { version = "0.7",  features = ["mysql", "runtime-tokio", "macros"] }
dotenvy = "0.15"
